packages/next-swc/crates/core/tests/errors/next-font-loaders/not-ident/output.js
import '@next/font/google?{"font":"Inter","variant":"400"}';
import '@next/font/google?{"font":"Inter","variant":"400"}';
const { e  } = {};
